[package]
name = "devctl"
version = "1.0.0"
edition = "2021"
description = "Your personal dev environment manager — dotfiles, projects, snapshots, secrets."
license = "MIT"
readme = "README.md"

[[bin]]
name = "devctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["preserve_order"] }
comfy-table = "7"
owo-colors = { version = "4", features = ["supports-colors"] }
inquire = "0.7"
dirs = "5"
anyhow = "1"
# Milestone 2: encrypted secret vault
argon2 = "0.5"
crypto_secretbox = "0.1"
getrandom = "0.2"
rpassword = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
