[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devctl"
version = "1.0.0"
description = "Your personal dev environment manager — dotfiles, projects, snapshots, secrets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "You" }]
keywords = ["cli", "devtools", "dotfiles", "environment", "secrets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pynacl>=1.5",
    "questionary>=2.0",
    "GitPython>=3.1",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
devctl = "devctl.cli:app"

[tool.setuptools.packages.find]
include = ["devctl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["devctl"]
omit = ["devctl/__init__.py"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py39"
